--- a/sensor.yaml
+++ b/sensor.yaml
@@ -249,14 +249,14 @@
       value_template: >
         {{states.sensor.dark_sky_daily_high_temperature.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon.state ~ '.svg'}}
 
     forecast_1:
       friendly_name: 'Tomorrow'
       value_template: >
         {{states.sensor.dark_sky_daily_high_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_1.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_1.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_1.state ~ '.svg'}}
 
     forecast_2:
       friendly_name_template: >
@@ -265,7 +265,7 @@
       value_template: >
         {{states.sensor.dark_sky_daily_high_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_2.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_2.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_2.state ~ '.svg'}}
 
     forecast_3:
       friendly_name_template: >
@@ -274,7 +274,7 @@
       value_template: >
         {{states.sensor.dark_sky_daily_high_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_3.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_3.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_3.state ~ '.svg'}}
 
     forecast_4:
       friendly_name_template: >
@@ -283,7 +283,7 @@
       value_template: >
         {{states.sensor.dark_sky_daily_high_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_4.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_4.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_4.state ~ '.svg'}}
 
     forecast_5:
       friendly_name_template: >
@@ -292,7 +292,7 @@
       value_template: >
         {{states.sensor.dark_sky_daily_high_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_5.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_5.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_5.state ~ '.svg'}}
 
     forecast_6:
       friendly_name_template: >
@@ -301,7 +301,7 @@
       value_template: >
           {{states.sensor.dark_sky_daily_high_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_6.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_6.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_6.state ~ '.svg'}}
 
     forecast_7:
       friendly_name_template: >
@@ -310,7 +310,7 @@
       value_template: >
           {{states.sensor.dark_sky_daily_high_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_7.state|round(0)}}%
       entity_picture_template: >-
-          {{ '/local/icons/dark_sky/' ~ states.sensor.dark_sky_icon_7.state ~ '.svg'}}
+          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_7.state ~ '.svg'}}
 #- platform: waqi
 #  name: waqi
 #  token: !secret waqi_token
