--- a/sensor.yaml
+++ b/sensor.yaml
@@ -6,6 +6,7 @@
   destination: !secret zone1_fullname
   options:
     mode: driving
+
 - platform: google_travel_time
   name: google_travel_time_dev1_bicycling
   api_key: !secret google_api
@@ -14,6 +15,7 @@
   destination: !secret zone1_fullname
   options:
     mode: bicycling
+
 - platform: google_travel_time
   name: google_travel_time_dev1_transit
   api_key: !secret google_api
@@ -22,6 +24,7 @@
   destination: !secret zone1_fullname
   options:
     mode: transit
+
 - platform: google_travel_time
   name: google_travel_time_dev1_dynamic_home
   api_key: !secret google_api
@@ -29,6 +32,7 @@
   destination: zone.home
   options:
     mode: transit
+
 - platform: google_travel_time
   name: google_travel_time_dev2_driving
   api_key: !secret google_api
@@ -37,6 +41,7 @@
   destination: !secret zone2_fullname
   options:
     mode: driving
+
 - platform: google_travel_time
   name: google_travel_time_dev2_bicycling
   api_key: !secret google_api
@@ -45,6 +50,7 @@
   destination: !secret zone2_fullname
   options:
     mode: bicycling
+
 - platform: google_travel_time
   name: google_travel_time_dev2_transit
   api_key: !secret google_api
@@ -53,6 +59,7 @@
   destination: !secret zone2_fullname
   options:
     mode: transit
+
 - platform: google_travel_time
   name: google_travel_time_dev2_dynamic_home
   api_key: !secret google_api
@@ -60,88 +67,71 @@
   destination: zone.home
   options:
     mode: driving
-- platform: zamg
-  station_id: !secret zamg_station
-  monitored_conditions:
-    - temperature
-    - humidity
-    - precipitation
-    - wind_speed
-    - dewpoint
+
 - platform: uber
   server_token: !secret uber_st
   end_latitude: !secret uber_endlat
   end_longitude: !secret uber_endlong
   product_ids:
     - '0af354f1-e12e-4253-abae-3df48506c658'
-- platform: darksky
-  api_key: !secret darksky_ak
-  forecast:
-      - 1
-      - 2
-      - 3
-      - 4
-      - 5
-      - 6
-      - 7
-  monitored_conditions:
-    - icon
-    - precip_intensity
-    - precip_probability
-    - temperature
-    - dew_point
-    - uv_index
-    - wind_speed
-    - humidity
-    - temperature_min
-    - temperature_max
+
 - platform: time_date
   display_options:
     - 'time'
     - 'date'
+
 #- platform: imap
 #  name: mail
 #  server: !secret mail_server
 #  port: 993
 #  username: !secret mail_uname
 #  password: !secret mail_pw
+
 - platform: mqtt
   name: sonoff_3028_version
   state_topic: "stat/sonoff/STATUS2"
   value_template: "{{ value_json['StatusFWR'].Version }}"
+
 - platform: mqtt
   name: sonoff_room_temperature
   state_topic: "tele/sonoff/SENSOR"
   value_template: "{{ value_json['AM2301'].Temperature }}"
   unit_of_measurement: "°C"
+
 - platform: mqtt
   name: sonoff_room_humidty
   state_topic: "tele/sonoff/SENSOR"
   value_template: "{{ value_json['AM2301'].Humidity }}"
   unit_of_measurement: "%"
+
 - platform: mqtt
   name: sonoff_uptime
   state_topic: "tele/sonoff/STATE"
   value_template: "{{ value_json.Uptime }}"
   unit_of_measurement: "h"
+
 - platform: mqtt
   name: sonoff_rssi
   state_topic: "tele/sonoff/STATE"
   value_template: "{{ value_json['Wifi'].RSSI }}"
   unit_of_measurement: "dBm"
+
 - platform: mqtt
   name: sonoff_vcc
   state_topic: "tele/sonoff/STATE"
   value_template: "{{ value_json.Vcc }}"
   unit_of_measurement: "V"
+
 - platform: mqtt
   name: sonoff_maddox_version
   state_topic: "sonoff-version"
   #value_template: "{{ value_json['Wifi'].RSSI }}"
   #unit_of_measurement: "dBm"
+
 - platform: cert_expiry
   name: ssl_certificate_expiry
   host: !secret host_domain
+
 - platform: systemmonitor
   resources:
     - type: disk_free
@@ -156,6 +146,7 @@
     - type: network_out
       arg: eth0
     - type: swap_use_percent
+
 #- platform: geizhals
 #  name: geizh_huee27
 #  product_id: 1455121
@@ -168,34 +159,24 @@
 #  description: "Hue GU10"
 #  domain: 'geizhals.at'
 #  regex: '\D\s(\d*)[\,|\.](\d*)'
+
 - platform: command_line
   name: CPU Temperature
   command: cat /sys/class/thermal/thermal_zone1/temp
   unit_of_measurement: '°C'
   value_template: '{{ (value|int / 1000)|round(1) }}'
+
 - platform: speedtest
   name: speedtest
   monitored_conditions:
     - ping
     - download
     - upload
+
 - platform: uptime
   name: Uptime
   unit_of_measurement: hours
-- platform: luftdaten
-  sensorid: !secret luftdaten_sensor1
-  name: luftdaten_particle_sensor
-  verify_ssl: true
-  monitored_conditions:
-      - P1
-      - P2
-- platform: luftdaten
-  name: luftdaten_climate_sensor
-  sensorid: !secret luftdaten_sensor2
-  verify_ssl: true
-  monitored_conditions:
-    - temperature
-    - humidity
+
 - platform: version
   name: hass_version
 #- platform: bitcoin
@@ -203,114 +184,30 @@
 #  display_options:
 #    - exchangerate
 #    - trade_volume_btc
-- platform: template
-  sensors:
-    wakeup_alarm_time:
-      friendly_name: 'Alarm'
-      value_template: '{% if states.input_number.wakeup_hour.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_hour.state | int }}:{% if states.input_number.wakeup_minutes.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_minutes.state | int }}'
-- platform: template
-  sensors:
-    wakeup_start_time_lights:
-      friendly_name: 'Fade-in Startzeit'
-      value_template: >
-        {% if states.sensor.wakeup_alarm_time and states.input_number.wakeup_duration %}
-        {% set alarmtime = states.sensor.wakeup_alarm_time.state %}
-        {% set alarm_hour = alarmtime.split(":")[0] | int %}
-        {% set alarm_min = alarmtime.split(":")[1] | int %}
-        {% set light_dur = states.input_number.wakeup_duration.state | int %}
-        {% set alarm_min_light = alarm_min - light_dur %}
-        {% if alarm_min_light  < 0 %}
-        {% set alarm_min_light = alarm_min_light + 60 %}
-        {% set alarm_hour_light = alarm_hour - 1 %}
-        {% if alarm_hour_light < 0 %}{% set alarm_hour_light = 23 %}{% endif %}
-        {% if alarm_hour_light < 10 %}0{% endif %}{{ alarm_hour_light}}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
-        {% else %}
-        {% if alarm_hour < 10 %}0{% endif %}{{ alarm_hour }}:{% if alarm_min_light < 10 %}0{% endif %}{{ alarm_min_light }}
-        {% endif %}
-        {% endif %}
-- platform: template
-  sensors:
-    wakeup_fadein_duration:
-      friendly_name: 'Fade-in Dauer'
-      value_template: '{{ states.input_number.wakeup_duration.state | int }}'
-      unit_of_measurement: 'min'
+
 - platform: sql
   db_url: !secret mysql_db
   queries:
-    - name: database size
+    - name: database size hass
       query: 'SELECT table_schema "database", Round(Sum(data_length + index_length) / 1024 / 1024, 1) "value" FROM information_schema.tables WHERE table_schema="hassdb" GROUP BY table_schema;'
       column: 'value'
       unit_of_measurement: MB
-- platform: season
-- platform: template
-  sensors:
-    forecast_today:
-      friendly_name: "Vorhersage"
-      value_template: >
-        {{states.sensor.dark_sky_daily_high_temperature.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon.state ~ '.svg'}}
+    - name: database size nc
+      query: 'SELECT table_schema "database", Round(Sum(data_length + index_length) / 1024 / 1024, 1) "value" FROM information_schema.tables WHERE table_schema="nextcloud" GROUP BY table_schema;'
+      column: 'value'
+      unit_of_measurement: MB
 
-    forecast_1:
-      friendly_name: 'Tomorrow'
-      value_template: >
-        {{states.sensor.dark_sky_daily_high_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_1.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_1.state ~ '.svg'}}
+- platform: fail2ban
+  file_path: /fail2ban/fail2ban.log
+  scan_interval: 180
+  jails:
+    - homeassistant
+    - nextcloud
+    - sshd
 
-    forecast_2:
-      friendly_name_template: >
-          {%- set date = as_timestamp(now()) + (2 * 86400 ) -%}
-          {{ date | timestamp_custom("%A (%-m/%-d)") }}
-      value_template: >
-        {{states.sensor.dark_sky_daily_high_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_2.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_2.state ~ '.svg'}}
-
-    forecast_3:
-      friendly_name_template: >
-          {%- set date = as_timestamp(now()) + (3 * 86400 ) -%}
-          {{ date | timestamp_custom("%A (%-m/%-d)") }}
-      value_template: >
-        {{states.sensor.dark_sky_daily_high_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_3.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_3.state ~ '.svg'}}
-
-    forecast_4:
-      friendly_name_template: >
-          {%- set date = as_timestamp(now()) + (4 * 86400 ) -%}
-          {{ date | timestamp_custom("%A (%-m/%-d)") }}
-      value_template: >
-        {{states.sensor.dark_sky_daily_high_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_4.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_4.state ~ '.svg'}}
-
-    forecast_5:
-      friendly_name_template: >
-          {%- set date = as_timestamp(now()) + (5 * 86400 ) -%}
-          {{ date | timestamp_custom("%A (%-m/%-d)") }}
-      value_template: >
-        {{states.sensor.dark_sky_daily_high_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_5.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_5.state ~ '.svg'}}
-
-    forecast_6:
-      friendly_name_template: >
-          {%- set date = as_timestamp(now()) + (6 * 86400 ) -%}
-          {{ date | timestamp_custom("%A (%-m/%-d)") }}
-      value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_6.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_6.state ~ '.svg'}}
-
-    forecast_7:
-      friendly_name_template: >
-          {%- set date = as_timestamp(now()) + (7 * 86400 ) -%}
-          {{ date | timestamp_custom("%A (%-m/%-d)") }}
-      value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_7.state|round(0)}}%
-      entity_picture_template: >-
-          {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_7.state ~ '.svg'}}
+- platform: rest
+  name: SC Tiles latest version
+  resource: https://raw.githubusercontent.com/c727/home-assistant-tiles/master/LATEST_VERSION
 #- platform: waqi
 #  name: waqi
 #  token: !secret waqi_token
